Finished with model documentation